--- a/WebApp/WebApp/Dockerfile
+++ b/WebApp/WebApp/Dockerfile
@@ -4,7 +4,7 @@ EXPOSE 80
 
 FROM microsoft/dotnet:2.1-sdk AS build
 WORKDIR /src
-COPY ["WebApp/WebApp.csproj", "WebApp/"]
+COPY ["WebApp.csproj", "WebApp/"]
 RUN dotnet restore "WebApp/WebApp.csproj"
 COPY . .
 WORKDIR "/src/WebApp"
