--- a/WebApp/WebApp/Dockerfile
+++ b/WebApp/WebApp/Dockerfile
@@ -6,7 +6,7 @@ FROM microsoft/dotnet:2.1-sdk AS build
 WORKDIR /src
 COPY ["WebApp.csproj", "WebApp/"]
 RUN dotnet restore "WebApp/WebApp.csproj"
-COPY . .
+COPY . /src/WebApp
 WORKDIR "/src/WebApp"
 RUN dotnet build "WebApp.csproj" -c Release -o /app
 
