--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,5 @@
 # ASP.NET Core
+
 # Build and test ASP.NET Core projects targeting .NET Core.
 # Add steps that run tests, create a NuGet package, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
@@ -14,23 +15,9 @@ variables:
   imageName: 'hassaanch/webapp:$(build.buildNumber)'
 
 steps:
-- task: Docker@1
-  displayName: Build an image
+- task: Docker@2
   inputs:
-    command: Build an image
-    containerregistrytype: Container Registry
-    dockerRegistryEndpoint: DockerHub
-    dockerFile: Dockerfile
-    imageName: $(imageName)
-    imageNamesPath: 
-    restartPolicy: always
-- task: Docker@1
-  displayName: Push an image
-  inputs:
-    command: Push an image
-    containerregistrytype: Container Registry
-    dockerRegistryEndpoint: DockerHub
-    dockerFile: Dockerfile
-    imageName: $(imageName)
-    imageNamesPath: 
-    restartPolicy: always
+    containerRegistry: 'DockerHub'
+    repository: 'webapp'
+    command: 'buildAndPush'
+    Dockerfile: '**/Dockerfile'
