--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,7 @@ steps:
 - task: Docker@2
   inputs:
     containerRegistry: 'DockerHub'
-    repository: 'webapp'
+    repository: 'hassaanch/webapp'
     command: 'buildAndPush'
     Dockerfile: '**/Dockerfile'
+    
